--- a/package.json
+++ b/package.json
@@ -18,15 +18,24 @@
   "homepage": "https://github.com/fernandops26/Express-Passport-FacebookAuth-#readme",
   "dependencies": {
     "body-parser": "^1.15.1",
+    "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "gulp": "^3.9.1",
+    "gulp-express": "^0.3.5",
+    "gulp-livereload": "^3.8.1",
+    "gulp-nodemon": "^2.0.6",
+    "gulp-notify": "^2.2.0",
+    "gulp-sass": "^2.3.1",
     "jade": "^1.11.0",
     "mongoose": "^4.4.15",
     "multer": "^1.1.0",
+    "nodemon": "^1.9.1",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.0",
     "passport-http": "^0.3.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^4.0.0"
+    "passport-local-mongoose": "^4.0.0",
+    "passport-twitter": "^1.0.4"
   }
 }
